Closed Bug 779149 Opened 12 years ago Closed 12 years ago

[Dialer] Audio does not go through headset

Categories

(Firefox OS Graveyard :: General, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-basecamp:+)

VERIFIED FIXED
blocking-basecamp +

People

(Reporter: nhirata, Assigned: slee)

References

Details

Attachments

(1 file, 1 obsolete file)

Environment :

Otoro phone, build 2012-07-30
Taken from default.xml in b2g-distro:

    "platform_build" revision= 2163d79
    "gaia" revision= 759caf5
    "mozilla-central" revision= 07226cf
    "gonk-misc" revision= c6a9a25

Repro :

1)    plug in headset
2)    open dialer
3)    make a call

Expected :

    the number tones should go through the headset, the call audio should go through the headset

Actual :

    all audio goes through speaker of the phone

Note :
    it's easier to hear calls imo through a headset for mobile devices...
    Gaia issue : https://github.com/mozilla-b2g/gaia/issues/2971
Agreed, audio should go through the headset. Nom'ing for basecamp.
blocking-basecamp: --- → ?
Hi Steven, is it related to Bug 745078 you are working on?
Yes, the headset uevent behavior is different from SGS2. I fixed it in Bug 745075. It should be landed soon.
(In reply to StevenLee from comment #3)
> Yes, the headset uevent behavior is different from SGS2. I fixed it in Bug
> 745075. It should be landed soon.

I am sorry for the typo, it should be Bug 745078.
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → DUPLICATE
blocking-basecamp: ? → +
Keywords: qawanted
qawanted added, because bug 745078 is reso-fixed, but we need confirmation it really fixes this bug.
blocking-basecamp: + → ?
QA Contact: dclarke
Tested on a nexus s and on a galaxy s2 with today's b2g build.

The tones when you call a number and the ringtone when you get a call go through the headset.

However the phone call sound doesn't go through the headset.
Dupe is basecamp+ so this should be, too.
blocking-basecamp: ? → +
Attached patch patch (obsolete) — Splinter Review
Hi mwu,

The way to change audio routing is different when upgrading to ICS.
I modify the functions to set audio routing. Please check it.
Attachment #651383 - Flags: review?(mwu)
I'll assume this isn't a dupe then.
Status: RESOLVED → REOPENED
Resolution: DUPLICATE → ---
Comment on attachment 651383 [details] [diff] [review]
patch

Review of attachment 651383 [details] [diff] [review]:
-----------------------------------------------------------------

::: media/libsydneyaudio/src/gonk/AudioSystem.h
@@ +223,5 @@
>  } audio_channels_t;
>  
>  #endif
>  
> +//#ifdef VANILLA_ANDROID

Remove this line

@@ +311,5 @@
> +    AUDIO_POLICY_DEVICE_STATE_CNT,
> +    AUDIO_POLICY_DEVICE_STATE_MAX = AUDIO_POLICY_DEVICE_STATE_CNT - 1,
> +} audio_policy_dev_state_t;
> +
> +//#endif //VANILLA_ANDROID

Remove this line too
Attachment #651383 - Flags: review?(mwu) → review+
Attached patch patch V2Splinter Review
Attachment #651383 - Attachment is obsolete: true
Attachment #652094 - Flags: review+
Keywords: checkin-needed
Pushing without Try results since b2g-only.

https://hg.mozilla.org/integration/mozilla-inbound/rev/e16055525c59
Assignee: nobody → slee
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/e16055525c59
Status: REOPENED → RESOLVED
Closed: 12 years ago12 years ago
Resolution: --- → FIXED
Verified 
otoro: 08/20/2012 daily build
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: