Bug 779149 - [Dialer] Audio does not go through headset. r=mwu